# rust-coding-test

./: .gitignore  Cargo.toml  README.MD
src/: domain.rs  lib.rs  main.rs  output.rs  parsing.rs
src/engine/: errors.rs  mod.rs  types.rs
tests/: chargeback_tests.rs  deposit_tests.rs  dispute_tests.rs  io_tests.rs  lifecycle_tests.rs  locked_account_tests.rs  resolve_tests.rs  withdrawal_tests.rs
tests/common/: mod.rs
tests/io_tests/: test_input.csv
