[package]
name = "rust_coding_test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.4.0"
derive_more = { version = "2.1.1", features = ["full"] }
rust_decimal = { version = "1.40.0", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true